Added a Message class and made some code cleaning to make it more readable, added comments.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(DATASET "com/dataset/")
 set(FIELD "com/field/")
 set(LABELDISTANCE "com/labeldistance/")
 set(WINDOW "com/window/")
+set(MESSAGE "com/message/")
 
 # Custom command to create directories when cmake .. is used
 execute_process(
@@ -19,15 +20,22 @@ COMMAND mkdir ${EXT}
 COMMAND mkdir ${DATASET}
 COMMAND mkdir ${FIELD}
 COMMAND mkdir ${LABELDISTANCE}
-COMMAND mkdir ${WINDOW})
+COMMAND mkdir ${WINDOW}
+COMMAND mkdir ${MESSAGE})
 
 # Make the project (m for make)
 add_custom_target(m
-COMMAND javac ../${DATASET}*.java ../${FIELD}*.java ../${LABELDISTANCE}*.java ../${WINDOW}*.java ../${MAIN}*.java
+COMMAND javac ../${DATASET}*.java
+../${FIELD}*.java
+../${LABELDISTANCE}*.java
+../${WINDOW}*.java
+../${MESSAGE}*.java
+../${MAIN}*.java
 COMMAND mv ../${DATASET}*.class ${DATASET}
 COMMAND mv ../${FIELD}*.class ${FIELD}
 COMMAND mv ../${LABELDISTANCE}*.class ${LABELDISTANCE}
 COMMAND mv ../${WINDOW}*.class ${WINDOW}
+COMMAND mv ../${MESSAGE}*.class ${MESSAGE}
 COMMAND mv ../${MAIN}.class .)
 
 # Run the project (r for run)
@@ -39,4 +47,5 @@ COMMAND rm ${DATASET}*.class
 COMMAND rm ${FIELD}*.class
 COMMAND rm ${LABELDISTANCE}*.class
 COMMAND rm ${WINDOW}*.class
+COMMAND rm ${MESSAGE}*.class
 COMMAND rm ${MAIN}.class)
