Changed the name of Window class to MainWindow (ambiguous), added ButtonListener class and button specific class to add more readibility to the code. Added comments.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(FIELD "com/field/")
 set(LABELDISTANCE "com/labeldistance/")
 set(WINDOW "com/window/")
 set(IMAGE "com/image/")
+set(BUTTON "com/button/")
 set(MESSAGE "com/message/")
 
 # Custom command to create directories when cmake .. is used
@@ -23,6 +24,7 @@ COMMAND mkdir ${FIELD}
 COMMAND mkdir ${LABELDISTANCE}
 COMMAND mkdir ${WINDOW}
 COMMAND mkdir ${IMAGE}
+COMMAND mkdir ${BUTTON}
 COMMAND mkdir ${MESSAGE})
 
 # Make the project (m for make)
@@ -32,6 +34,7 @@ COMMAND javac ../${DATASET}*.java
 ../${LABELDISTANCE}*.java
 ../${WINDOW}*.java
 ../${IMAGE}*.java
+../${BUTTON}*.java
 ../${MESSAGE}*.java
 ../${MAIN}*.java
 COMMAND mv ../${DATASET}*.class ${DATASET}
@@ -39,6 +42,7 @@ COMMAND mv ../${FIELD}*.class ${FIELD}
 COMMAND mv ../${LABELDISTANCE}*.class ${LABELDISTANCE}
 COMMAND mv ../${WINDOW}*.class ${WINDOW}
 COMMAND mv ../${IMAGE}*.class ${IMAGE}
+COMMAND mv ../${BUTTON}*.class ${BUTTON}
 COMMAND mv ../${MESSAGE}*.class ${MESSAGE}
 COMMAND mv ../${MAIN}.class .)
 
@@ -52,5 +56,6 @@ COMMAND rm ${FIELD}*.class
 COMMAND rm ${LABELDISTANCE}*.class
 COMMAND rm ${WINDOW}*.class
 COMMAND rm ${IMAGE}*.class
+COMMAND rm ${BUTTON}*.class
 COMMAND rm ${MESSAGE}*.class
 COMMAND rm ${MAIN}.class)
