Created an ImageProcessing class in which every not to specific image related methods are placed, done to make the code more readable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(LABELDISTANCE "com/labeldistance/")
 set(WINDOW "com/window/")
 set(BUTTON "com/button/")
 set(PANE "com/pane/")
+set(IMAGE "com/image/")
 set(MESSAGE "com/message/")
 
 # Custom command to create directories when cmake .. is used
@@ -25,7 +26,8 @@ COMMAND mkdir ${LABELDISTANCE}
 COMMAND mkdir ${WINDOW}
 COMMAND mkdir ${BUTTON}
 COMMAND mkdir ${MESSAGE}
-COMMAND mkdir ${PANE})
+COMMAND mkdir ${PANE}
+COMMAND mkdir ${IMAGE})
 
 # Make the project (m for make)
 add_custom_target(m
@@ -36,6 +38,7 @@ COMMAND javac ../${DATASET}*.java
 ../${BUTTON}*.java
 ../${MESSAGE}*.java
 ../${PANE}*.java
+../${IMAGE}*.java
 ../${MAIN}*.java
 COMMAND mv ../${DATASET}*.class ${DATASET}
 COMMAND mv ../${FIELD}*.class ${FIELD}
@@ -44,6 +47,7 @@ COMMAND mv ../${WINDOW}*.class ${WINDOW}
 COMMAND mv ../${BUTTON}*.class ${BUTTON}
 COMMAND mv ../${MESSAGE}*.class ${MESSAGE}
 COMMAND mv ../${PANE}*.class ${PANE}
+COMMAND mv ../${IMAGE}*.class ${IMAGE}
 COMMAND mv ../${MAIN}.class .)
 
 # Run the project (r for run)
@@ -58,4 +62,5 @@ COMMAND rm ${WINDOW}*.class
 COMMAND rm ${BUTTON}*.class
 COMMAND rm ${MESSAGE}*.class
 COMMAND rm ${PANE}*.class
+COMMAND rm ${IMAGE}*.class
 COMMAND rm ${MAIN}.class)
